<?xml version="1.0" encoding="utf-8"?>

<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.solarsystemquiz.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="#FFD180">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:layout_weight="1">

            <ImageView
                android:contentDescription="@string/Quiz_question"
                android:id="@+id/solar_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/solarsystem"/>

            <TextView
                android:id="@+id/Title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Quiz_question"
                android:textSize="30sp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player"
            android:textColorHint="@color/text"
            android:textColor="@color/text"
            android:inputType="textCapWords"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/question_1"
    android:textSize="20sp"
    android:textColor="@color/text"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="10dp"
    />
<RadioGroup
    android:id="@+id/first_radio_group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    >

        <RadioButton
            android:id="@+id/question1_wrong_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pluto"
            android:textColor="@color/text"/>
    <RadioButton
        android:id="@+id/question1_wrong_answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venus"
        android:textColor="@color/text"
        />
    <RadioButton
        android:id="@+id/mercury_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mercury"
        android:textColor="@color/text"/>
</RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <RadioGroup
            android:id="@+id/second_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            >
            <RadioButton
                android:id="@+id/question2_wrong_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_minute"
                android:textColor="@color/text"/>
            <RadioButton
                android:id="@+id/question2_wrong_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twenty_three_hours"
                android:textColor="@color/text"
                />
            <RadioButton
                android:id="@+id/eight_minutes_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight_minutes"
                android:textColor="@color/text"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <RadioGroup
            android:id="@+id/third_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <RadioButton
                android:id="@+id/j_sun_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/j_s_u_n"
                android:textColor="@color/text"/>
            <RadioButton
                android:id="@+id/question3_wrong_answer1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/v_e_m_m"
                android:textColor="@color/text"
                />
            <RadioButton
                android:id="@+id/question3_wrong_answer2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/j_s_u_n_p"
                android:textColor="@color/text"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <RadioGroup
            android:id="@+id/fourth_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <RadioButton
                android:id="@+id/question4_wrong_answer1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/saturn"
                android:textColor="@color/text"
                />
            <RadioButton
                android:id="@+id/jupiter_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/jupiter"
                android:textColor="@color/text"
                />
            <RadioButton
                android:id="@+id/question4_wrong_answer2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/uranus"
                android:textColor="@color/text"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <RadioGroup
            android:id="@+id/fifth_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <RadioButton
                android:id="@+id/milky_way_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/milky_way"
                android:textColor="@color/text"/>
            <RadioButton
                android:id="@+id/question5_wrong_answer1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/andromeda"
                android:textColor="@color/text"
                />
            <RadioButton
                android:id="@+id/question5_wrong_answer2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/whirlpool"
                android:textColor="@color/text"/>

        </RadioGroup>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <RadioGroup
            android:id="@+id/sixth_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <RadioButton
                android:id="@+id/question6_wrong_answer1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/jupiter"
                android:textColor="@color/text"/>
            <RadioButton
                android:id="@+id/question6_wrong_answer2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/uranus"
                android:textColor="@color/text"
                />
            <RadioButton
                android:id="@+id/no_moons_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mercury"
                android:textColor="@color/text"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_7"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <RadioGroup
            android:id="@+id/seventh_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <RadioButton
                android:id="@+id/question7_wrong_answer1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mountain"
                android:textColor="@color/text"/>
            <RadioButton
                android:id="@+id/question7_wrong_answer2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/volcano"
                android:textColor="@color/text"
                />
            <RadioButton
                android:id="@+id/giant_storm_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/giant_storm"
                android:textColor="@color/text"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_8"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <CheckBox
            android:id="@+id/rings_surrounded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rings"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text"/>
        <CheckBox
            android:id="@+id/tilted_orbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tilted"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text"/>
        <CheckBox
            android:id="@+id/one_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/uranus_year"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_9"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />

        <CheckBox
            android:id="@+id/alpha_centauri"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/alpha"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text"/>

        <CheckBox
            android:id="@+id/hydrogen_helium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hydrogen_helium"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text"
            />
        <CheckBox
            android:id="@+id/red_dwarf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/red_dwarf_star"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/text"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_10"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text"
            />
        <EditText
            android:id="@+id/pluto_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/write"
            android:textColorHint="@color/text"
            android:textColor="@color/text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
          />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:onClick="resetAnswers"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitAnswer"
                android:text="@string/submit"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>


